# alma

./: .dockerignore  .env.example  .gitignore  DEMO_SCRIPT.md  Dockerfile  README.md  app.py  config.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
data/: generate_synthetic_data.py  policies.json
explain/: agent.py
graph/: load_graph.py  queries.py
rag/: eligibility_bot.py
solver/: timetable_solver.py
