[project]
name = "academic-timetable-copilot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "gradio>=6.19.0",
    "neo4j>=6.2.0",
    "openai>=2.44.0",
    "ortools>=9.15.6755",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]
